@@ -23,6 +23,14 @@
 #include <grub/symbol.h>
 #include <grub/types.h>
 
+#if defined (__i386__) || defined (__x86_64__)
+static inline void
+grub_arch_sync_caches (void *address __attribute__ ((unused)),
+		       grub_size_t len __attribute__ ((unused)))
+{
+}
+#else
 void EXPORT_FUNC(grub_arch_sync_caches) (void *address, grub_size_t len);
+#endif
 
 #endif /* ! GRUB_CACHE_HEADER */
