@@ -45,9 +45,3 @@ grub_machine_set_prefix (void)
 {
   grub_efi_set_prefix ();
 }
-
-void
-grub_arch_sync_caches (void *address __attribute__ ((unused)),
-                       grub_size_t len __attribute__ ((unused)))
-{
-}
